<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.swagelok</groupId>
    <artifactId>swagelok-automation</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <inherited>true</inherited>
                <version>3.0.0-M5</version>
                <configuration>
                    <includes>
                    <include>JunitRunner</include>
                </includes>
                    <systemPropertyVariables>
                        <test.environment>${env.NAME}</test.environment>
<!--                        <test.environment>qa</test.environment>-->
                    </systemPropertyVariables>

                <!--                    <argLine>-->
<!--                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"-->
<!--                    </argLine>-->
                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
<!--                    <systemPropertyVariables>-->
<!--                        <test.environment>${env.NAME}</test.environment>-->
<!--                        <test.suite>${execution.suite.name}</test.suite>-->
<!--                    </systemPropertyVariables>-->
                    <forkCount>2C</forkCount>
                    <reuseForks>true</reuseForks>
                    <perCoreThreadCount>false</perCoreThreadCount>
<!--                    <parallel>tests</parallel>-->
<!--                    <threadCount>${execution.threads}</threadCount>-->
<!--                    <suiteXmlFiles>-->
<!--                        <suiteXmlFile>.\src\main\resources\TestSuites\${execution.suite.name}</suiteXmlFile>-->
<!--                    </suiteXmlFiles>-->
                </configuration>
            </plugin>

        </plugins>
        <finalName>${project.name}-${project.version}</finalName>
        <resources>
            <resource>
                <directory>${project.basedir}/src/test/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.3</version>
            <scope>test</scope>
        </dependency>


        <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-core -->
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-core</artifactId>
            <version>3.9.8</version>
        </dependency>
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>org.apache.maven.plugins</groupId>-->
<!--            <artifactId>maven-compiler-plugin</artifactId>-->
<!--            <version>3.8.1</version>-->
<!--            <scope>compile</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.apache.maven.plugins</groupId>-->
<!--            <artifactId>maven-surefire-plugin</artifactId>-->
<!--            <version>3.0.0-M5</version>-->
<!--        </dependency>-->
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.26.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>16.0.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.codeborne</groupId>
            <artifactId>selenide</artifactId>
            <version>7.5.1</version>
<!--            <scope>compile</scope>-->
        </dependency>
    </dependencies>

</project>